versions/v2.13/modules/zh/pages/rancher-admin/users/authn-and-authz/configure-keycloak-oidc.adoc
= 配置 Keycloak (OIDC)
:page-languages: [en, zh]
:revdate: 2025-12-08
:page-revdate: {revdate}
:description: 创建 Keycloak OpenID Connect (OIDC) 客户端并配置 Rancher 以使用 Keycloak。你的用户将能够使用他们的 Keycloak 登录名登录 Rancher。

如果你的组织使用 https://www.keycloak.org[Keycloak Identity Provider (IdP)] 进行用户身份验证，你可以通过配置 Rancher 来允许用户使用 IdP 凭证登录。Rancher 支持使用 OpenID Connect (OIDC) 协议和 SAML 协议来集成 Keycloak。与 Rancher 一起使用时，这两种实现在功能上是等效的。本文描述了配置 Rancher 以通过 OIDC 协议与 Keycloak 一起使用的流程。

如果你更喜欢将 Keycloak 与 SAML 协议一起使用，请参见xref:rancher-admin/users/authn-and-authz/configure-keycloak-saml.adoc[此页面]。

如果你有使用 SAML 协议的现有配置并希望切换到 OIDC 协议，请参见<<_从_saml_迁移到_oidc,本节>>。

[#_prerequisites]
== 先决条件

* 已在 Rancher 上禁用 Keycloak (SAML)。
* 你必须配置了 https://www.keycloak.org/guides#getting-started[Keycloak IdP 服务器]。
* Follow the https://www.keycloak.org/docs/latest/server_admin/#proc-creating-oidc-client_server_administration_guide[Keycloak documentation] to create a new OIDC client with the settings below.。
+
|===
| 设置 | 值

| `Client ID`
| <client-id> (例如 `rancher`)

| `Name`
| <client-name> (例如 `rancher`)

| `Client type`
| `OpenID Connect`

| `Client authentication`
| `ON`

| `Valid Redirect URI`
| `+https://yourRancherHostURL/verify-auth+`
|===

* 在新的 OIDC 客户端中，创建 https://www.keycloak.org/docs/latest/server_admin/#_protocol-mappers[Mappers] 来公开用户字段。
.. In the navigation menu, click **Clients**.
.. Click the **Clients list** tab.
.. Find and click the client you created.
.. Click the **Client scopes** tab.
.. Find and click the link labeled `<client-name>-dedicated`. For example, if you named your client `rancher`, look for the link named `rancher-dedicated`.
.. Click the **Mappers** tab.
.. Click **Configure a new mapper**. If you already have existing mappers configured, click the arrow next to **Add mapper** and select **By configuration**. Repeat this process and create these mappers:
*** From the mappings table, select **Group Membership** and configure a new "Groups Mapper" with the settings below. For settings that are not mentioned, use the default value.
+
|===
| Setting | Value

| `Name`
| `Groups Mapper`

| `Mapper Type`
| `Group Membership`

| `Token Claim Name`
| `groups`

| `Full group path`
| `OFF`

| `Add to ID token`
| `OFF`

| `Add to access token`
| `OFF`

| `Add to user info`
| `ON`
|===

*** From the mappings table, select **Audience** and configure a new "Client Audience" with the settings below. For settings that are not mentioned, use the default value.
+
|===
| Setting | Value

| `Name`
| `Client Audience`

| `Mapper Type`
| `Audience`

| `Included Client Audience`
| <client-name>

| `Add to ID token`
| `OFF`

| `Add to access token`
| `ON`
|===

*** From the mappings table, select **Group Membership** and configure a new "Groups Path" with the settings below. For settings that are not mentioned, use the default value.
+
|===
| Setting | Value

| `Name`
| `Group Path`

| `Mapper Type`
| `Group Membership`

| `Token Claim Name`
| `full_group_path`

| `Full group path`
| `ON`

| `Add to ID token`
| `ON`

| `Add to access token`
| `ON`

| `Add to user info`
| `ON`
|===

* Add the following role mappings to all users or groups that need to query the Keycloak users.
+
[tabs]
======
Users::
+
--
.. In the navigation menu, click **Users**.
.. Click the user you want to add role mappings to.
.. Click the **Role mapping** tab.
.. Click **Assign role**.
.. Select the following roles:
*** query-users
*** query-groups
*** view-users
.. Click **Assign**.
--

Groups::
+
--
.. In the navigation menu, click **Groups**.
.. Click the group  you want to add role mappings to.
.. Click the **Role mapping** tab.
.. Click **Assign role**.
.. Select the following roles:
*** query-users
*** query-groups
*** view-users
.. Click **Assign**.
--
======

[#_configuring_keycloak_in_rancher]
== 在 Rancher 中配置 Keycloak

. 在 Rancher UI 中，单击 *☰ > 用户 & 认证*。
. 单击左侧导航栏的**认证**。
. 选择 *Keycloak (OIDC)*
. Select *Keycloak (OIDC)*.。
. 填写**配置 Keycloak OIDC 账号**表单。有关填写表单的帮助，请参见<<_配置参考,配置参考>>。
+
[NOTE]
====
When configuring the **Endpoints** section using the **Generate** option, Rancher includes `/auth` as part of the context path in the **Issuer** and **Auth Endpoint** fields, which is only valid for Keycloak 16 or older. You must configure endpoints using the **Specify** option for https://www.keycloak.org/docs/latest/release_notes/index.html#keycloak-17-0-0[Keycloak 17] and newer, which have https://www.keycloak.org/migration/migrating-to-quarkus[migrated to Quarkus].  
====

. 完成**配置 Keycloak OIDC 账号**表单后，单击**启用**。
+
Rancher 会将你重定向到 IdP 登录页面。输入使用 Keycloak IdP 进行身份验证的凭证，来验证你的 Rancher Keycloak 配置。
+

[NOTE]
====
你可能需要禁用弹出窗口阻止程序才能看到 IdP 登录页面。
====


*结果*：已将 Rancher 配置为使用 OIDC 协议与 Keycloak 一起工作。你的用户现在可以使用 Keycloak 登录名登录 Rancher。

== 配置参考

|===
| 字段 | 描述

| 客户端 ID
| 你的 Keycloak 客户端的 `Client ID`。

| 客户端密码
| 你的 Keycloak 客户端生成的 `Secret`。在 Keycloak 控制台中，单击 *Clients*，选择你创建的客户端，选择 *Credentials* 选项卡，然后复制 `Secret` 字段的值。

| 私钥/证书
| 在 Rancher 和你的 IdP 之间创建安全外壳（SSH）的密钥/证书对。如果你的 Keycloak 服务器上启用了 HTTPS/SSL，则为必填。

| 端点
| 选择为 `Rancher URL`、``发行者``和 ``Auth 端点``字段使用生成的值，还是在不正确时进行手动覆盖。

| Keycloak URL
| 你的 Keycloak 服务器的 URL。

| Keycloak Realm
| 创建 Keycloak 客户端的 Realm 的名称。

| Rancher URL
| Rancher Server 的 URL。

| Issuer
| 你的 IdP 的 URL。

| Auth 端点
| 重定向用户进行身份验证的 URL。
|===

== 从 SAML 迁移到 OIDC

本节描述了将使用 Keycloak (SAML) 的 Rancher 过渡到 Keycloak (OIDC) 的过程。

. Reconfigure Keycloak.
.. Configure a new `OpenID Connect` client according to the <<_prerequisites,先决条件>>. Ensure the same `Valid Redirect URIs` are set.
.. Configure mappers for the new client according to the <<_prerequisites,先决条件>>.
. Before configuring Rancher to use Keycloak (OIDC), Keycloak (SAML) must be first disabled.
.. In the Rancher UI, click **☰ > Users & Authentication**.
.. In the left navigation bar, click **Auth Provider**.
.. Select **Keycloak (SAML)**.
.. Click **Disable**.
. Follow the steps in <<_configuring_keycloak_in_rancher,在 Rancher 中配置 Keycloak>>.
+
[WARNING]
====
配置完成后，由于用户权限不会自动迁移，你需要重新申请 Rancher 用户权限。
====

== 附录：故障排除

如果你在测试与 Keycloak 服务器的连接时遇到问题，请先检查 OIDC 客户端的配置选项。你还可以检查 Rancher 日志来查明问题的原因。调试日志可能包含有关错误的更详细信息。详情请参见xref:faq/technical-items.adoc#_如何启用调试日志记录[如何启用调试日志]。

所有与 Keycloak 相关的日志条目都将添加 `[generic oidc]` 或 `[keycloak oidc]`。

=== 不能重定向到 Keycloak

完成**配置 Keycloak OIDC 账号**表单并单击**启用**后，你没有被重定向到你的 IdP。

验证你的 Keycloak 客户端配置。

=== 生成的 `Issuer` 和 ``Auth 端点``不正确

在**配置 Keycloak OIDC 账号**表单中，将**端点**更改为``指定（高级设置）``并覆盖``发行者`` 和 ``Auth 端点``的值。要查找这些值，前往 Keycloak 控制台并选择 *Realm Settings*，选择 *General* 选项卡，然后单击 *OpenID Endpoint Configuration*。JSON 输出将显示 `issuer` 和 `authorization_endpoint` 的值。

=== Keycloak 错误："Invalid grant_type"

在某些情况下，这条错误提示信息可能有误导性，实际上造成错误的原因是 `Valid Redirect URI` 配置错误。

=== Unable to See Groups When Assigning Global Roles

If you use a user that is not part of any groups for initial setup, then you cannot search for groups when trying to assign a global role. To resolve this, you can either:

. Manually edit the `authconfig/keycloakoidc` object to enable group search.
 .. On the Rancher server:
+
[,bash]
----
  kubectl edit authconfigs.management.cattle.io keycloakoidc
----
 .. Set `groupSearchEnabled: true`.
 .. Save your changes.
. Reconfigure your Keycloak OIDC setup using a user that is assigned to at least one group in Keycloak.

== Configuring OIDC Single Logout (SLO)

include::shared:ROOT:partial$en/configure-slo-oidc.adoc[]
